--- a/app/views/refinery/admin/pages/index.html.erb
+++ b/app/views/refinery/admin/pages/index.html.erb
@@ -11,8 +11,7 @@
             </div>
             <div class="message message-right">
               <button class="close hidden"><i class="gcicon gcicon-close"></i></button>
-              <p>Howdy! How are ya feeling about the new site? You’re doing great!</p>
-              <p>By the way, please don’t forget to add content into your site’s pages. These are pages that tell your readers a little more about you. If you would like, you can add a &ldquo;child page&rdquo; under your About page. An example of a child page would be: <b>Who We Are</b>, <b>What We Do</b>, or <b>What We Believe</b> pages.</p>
+              <p>Your info pages tell your website visitors who you are and what you do, so please don’t forget to add updated content here. Remember, there are two groups of pages: <b>About Us</b> and <b>Get Involved</b>. Under each group, you may add/edit pages.</p>
             </div>
           </div>
         </div>
