--- a/app/assets/stylesheets/canvas/config/_base.scss
+++ b/app/assets/stylesheets/canvas/config/_base.scss
@@ -484,6 +484,13 @@ p::-moz-selection {
 	}
 }
 
+.load-more{
+  height: 120px;
+  .dimmer{
+    background: none !important;
+  }
+}
+
 .pill{
   padding: 5px 15px 5px 18px;
   height: 40px;
