--- a/app/views/refinery/admin/pages/index.html.erb
+++ b/app/views/refinery/admin/pages/index.html.erb
@@ -10,7 +10,7 @@
               <img class="img-circle" src="http://glasscanvas.s3.amazonaws.com/elephant/elephant-portrait.jpg"/>
             </div>
             <div class="message message-right">
-              <button class="close hidden"><i class="gcicon gcicon-close"></i></button>
+              <button class="close hidden"><i class="gcicon gcicon-cancel"></i></button>
               <p>Your info pages tell your website visitors who you are and what you do, so please don’t forget to add updated content here. Remember, there are two groups of pages: <b>About Us</b> and <b>Get Involved</b>. Under each group, you may add/edit pages.</p>
             </div>
           </div>
