--- a/app/views/glass/_html_editing_assets.html.erb
+++ b/app/views/glass/_html_editing_assets.html.erb
@@ -3,7 +3,7 @@
   <div id="glass-choose-module" class="new-module media-chooser clear glass-control singleton" contenteditable=false>
     <a href="" id="glass-choose-module-img" class="circle-icon media-type"><i class="gcicon gcicon-photo bump-down"></i></a>
     <a href="" id="glass-choose-module-vid" class="circle-icon media-type"><i class="gcicon gcicon-film"></i></a>
-    <a href="" id="glass-choose-custom"     class="circle-icon media-type">&lt;</a>
+    <!-- <a href="" id="glass-choose-custom"     class="circle-icon media-type">&lt;</a> -->
   </div>
   <div id="glass-module-settings-vid" class="new-module media-chooser clear glass-control singleton" contenteditable=false>
     <form id="glass-add-vid-form" role="form">
