--- a/app/assets/stylesheets/glass/partials/layout/_interface.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_interface.scss
@@ -507,6 +507,9 @@ body{
           margin-right: 10px;
         }
       }
+      .page-title{
+        margin-bottom: 0;
+      }
       h3{
         margin: 30px 0 0 0;
         font-size: 21px;
