--- a/app/views/refinery/admin/pages/_form.html.erb
+++ b/app/views/refinery/admin/pages/_form.html.erb
@@ -52,7 +52,7 @@
 
     <% use_view_templates = Refinery::Pages.config.use_view_templates.nil? ? true : Refinery::Pages.config.use_view_templates %>
     <% if use_view_templates || current_refinery_user.has_role?(:superuser) %>
-      <div class="sidebar-section no-border">
+      <div class="sidebar-section">
         <button type="button" class="collapse-toggle collapsed" data-toggle="collapse" data-target="#template-collapse" aria-expanded="true" aria-controls="demo">
           <div class="sidebar-section-heading">
             <i class="gcicon gcicon-index"></i> <span class="flex-1">Page Template</span> <i class="gcicon gcicon-down"></i>
