--- a/app/views/refinery/admin/pages/_form.html.erb
+++ b/app/views/refinery/admin/pages/_form.html.erb
@@ -84,7 +84,9 @@
 
     <%= render '/refinery/admin/form_actions', :f => f, :sidebar => true,
                :continue_editing => true,
-               :hide_delete => true,
+               :delete_title => t('delete', :scope => 'refinery.admin.pages'),
+               :delete_confirmation => t('message', :scope => 'refinery.admin.delete', :title => @page.title),
+               :delete_redirect_url => refinery.admin_pages_path,
                :before_cancel_button => submit_tag(
                  t('.preview'),
                  :id => 'preview-button',
