--- a/app/assets/stylesheets/glass/partials/components/_images.scss
+++ b/app/assets/stylesheets/glass/partials/components/_images.scss
@@ -29,16 +29,66 @@
   }
 }
 
-.upload-preview-container .file-preview {
-  margin-top: 15px;
-  display: inline-block;
-  margin-right: 15px;
-  width: 300px;
-  height: 200px;
-  text-align: center;
-  background-size: contain !important;
-  background-position: center center;
-  float: left;
+
+.upload-preview-container{
+  padding-top: 60%;
+  margin: 0;
+  background-color: $grey-6;
+  .upload-preview-inner{
+		position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin: 0;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .upload-overlay{
+      text-align: center;
+      span{
+        display: none !important;
+        visibility: visible !important;
+        color: $white;
+        font-size: 21px;
+        font-weight: 600;
+        margin-bottom: 15px;
+      }
+      .btn-primary{
+        background: transparent;
+        box-shadow: none;
+        border: 1px solid $white;
+        color: $white;
+        &:hover{
+          background: $white;
+          color: $primary-color;
+        }
+      }
+    }
+	}
+  .file-preview{
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.5;
+    background-size: cover !important;
+    background-position: center center;
+  }
+}
+
+.upload-circle{
+  margin: 0 auto;
+  max-width: 300px;
+  .upload-preview-container{
+    border-radius: 50%;
+    padding-top: 100%;
+  }
 }
 
 .progress-box {
