--- a/app/assets/stylesheets/glass/partials/layout/_interface.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_interface.scss
@@ -430,6 +430,9 @@ body{
       .upload-preview-container{
         .upload-preview-inner{
           border-radius: 0;
+          .file-preview{
+            border-radius: 0;
+          }
           .upload-overlay{
             span{
               display: block !important;
