--- a/app/assets/stylesheets/glass/partials/components/_images.scss
+++ b/app/assets/stylesheets/glass/partials/components/_images.scss
@@ -69,6 +69,7 @@
     }
 	}
   .file-preview{
+    border-radius: $radius;
     display: block !important;
     position: absolute;
     top: 0;
@@ -93,6 +94,7 @@
       border-radius: 50%;
     }
     .file-preview{
+      border-radius: 50%;
     }
   }
 }
