--- a/app/assets/stylesheets/glass/partials/components/_images.scss
+++ b/app/assets/stylesheets/glass/partials/components/_images.scss
@@ -113,7 +113,7 @@
 		width: 50px;
 		text-align: center;
 		position: absolute;
-		color: #ffffff;
+		color: #ffffff !important;
 	}
 }
 .progress {
