--- a/app/views/layouts/refinery/admin.html.erb
+++ b/app/views/layouts/refinery/admin.html.erb
@@ -99,6 +99,10 @@ html
         <section id="page-preview">
           <!-- this partial yields to :admin_page_preview -->
           <%= render partial: '/glass/body', locals: {admin: true} %>
+          <!-- Assets for editing -->
+          <%= render '/glass/html_editing_assets' %>
+          <!-- Hidden image upload form -->
+          <%= render 'refinery/admin/images/form' %>
         </section>
       <% elsif content_for?(:admin_content) %>
         <%= yield :admin_content %>
@@ -116,6 +120,7 @@ html
     </section>
 
     <%= yield :body_bottom %>
+
 
     <%= render partial: '/glass/javascripts', locals: {admin: true} %>
   </body>
