user invitations and password recover refactored

--- a/app/views/refinery/layouts/login.html.erb
+++ b/app/views/refinery/layouts/login.html.erb
@@ -11,7 +11,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
-          <div id="flash_container">
+          <div id="flash_container margin-bottom-md">
             <%= render '/refinery/message' %>
           </div>
         </div>
