updated how password resetting works so that invalid tokens redirect to / and @resourece info can be displayed in edit password view

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -68,7 +68,7 @@
   <% end %>
 
   <% content_for :email_footer do %>
-    <%= I18n.t("devise.mailer.invitation_instructions.ignore").html_safe %>
+    <%= I18n.t("refinery.mailer.invitation_instructions.ignore").html_safe %>
   <% end %>
 <% end %>
 <%= render 'refinery/email_template' %>
