--- a/app/views/refinery/passwords/edit.html.erb
+++ b/app/views/refinery/passwords/edit.html.erb
@@ -1,4 +1,4 @@
-<% unless resource.confirmed? %>
+<% unless @resource.confirmed? %>
   <h1>Getting to know you!</h1>
   <p>
     We’re so glad you’ve decided to join the movement of Right to Life organizations across Canada!
@@ -9,6 +9,9 @@
     This is the account that you will use in order to log in to the Content Management System (CMS).
   </p>
 <% else %>
+  <p>
+    <%= t('pick_new_password_for', :scope => 'refinery.users.reset', :email => @resource.username) %>
+  </p>
   <% content_for :header, t('pick_new_password_for', :scope => 'refinery.users.reset', :email => @refinery_user.email) %>
 <% end %>
 
@@ -33,7 +36,7 @@
 
   <%= render '/refinery/admin/form_actions', :f => f,
              :continue_editing => false,
-             :submit_button_text => resource.confirmed? ? t('reset_password', :scope => 'refinery.users.reset') : 'Set Password & Log in',
+             :submit_button_text => @resource.confirmed? ? t('reset_password', :scope => 'refinery.users.reset') : 'Set Password & Log in',
              :cancel_url => refinery.login_path,
              :cancel_title => nil,
              :hide_delete => true -%>
