--- a/app/assets/stylesheets/glass/_manifest-refinery-glass.scss
+++ b/app/assets/stylesheets/glass/_manifest-refinery-glass.scss
@@ -3,6 +3,6 @@
  * refinery-glass gem: /app/assets/stylesheets/refinery-glass.scss
  ******************************************************************************/
 
-@import "glass/manifest-back-and-frontend";
-@import "manifest-custom-back-and-frontend";
-@import "glass/manifest-backend";
+@import "glass/manifest-back-and-frontend.css.scss";
+@import "manifest-custom-back-and-frontend.css.scss";
+@import "glass/manifest-backend.css.scss";
