removed .css.scss

--- a/app/assets/stylesheets/refinery-glass.scss
+++ b/app/assets/stylesheets/refinery-glass.scss
@@ -30,5 +30,5 @@
  * included from in the <head>
  ******************************************************************************/
 
-@import "config/variables.css.scss";
-@import "glass/manifest-refinery-glass.css.scss";
+@import "config/variables";
+@import "glass/manifest-refinery-glass";
