--- a/app/assets/stylesheets/site.scss
+++ b/app/assets/stylesheets/site.scss
@@ -18,7 +18,7 @@
  ******************************************************************************/
 
 /******* Org specific variables ********/
-@import "config/variables.css.scss";
+@import "config/variables";
 
 /******* The rest of the styles ********/
-@import "glass/manifest-site.css.scss";
+@import "glass/manifest-site";
