user has site_url set on it for use in inviation email

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,7 +1,7 @@
 <% if @resource.confirmed? %>
   <!-- Password Recovery Email -->
   <% content_for :email_title do %>
-    Reset your <a href="https://<%= Refinery::Core.site_name %>" target="_blank"><%= Refinery::Core.site_name %></a> password&nbsp;
+    Reset your <%= Refinery::Core.site_name %> password&nbsp;
   <% end %>
 
   <% content_for :email_body do %>
@@ -25,33 +25,21 @@
 <% else %>
   <!-- Invitation Email -->
   <% content_for :email_title do %>
-    Welcome to <a href="https://<%= Refinery::Core.site_name %>" target="_blank"><%= Refinery::Core.site_name %></a>!&nbsp;
+    Welcome to <a href="<%= @resource.site_url %>" target="_blank"><%= Refinery::Core.site_name %></a>!&nbsp;
   <% end %>
 
   <% content_for :email_body do %>
     <% inviting_user = @resource.inviting_user %>
     <% first_name    = @resource.name.split.map(&:capitalize)[0] %>
 
-    <% if @resource.is_onboarding %>
-      <p>Welcome, <%= first_name %>!</p>
-      <p>
-        Great news! <%= inviting_user %> has invited you to be part of <a href="https://<%= Refinery::Core.site_name %>" target="_blank"><%= Refinery::Core.site_name %></a>!
-      </p>
-      <p><%= 'We\'re thrilled to have you. ' %></p>
-      <p><%= "Choosing to be a part of #{Refinery::Core.site_name} means that we can make an even bigger impact in Canada and the world. We're all in this together." %></p>
-      <p>We'll walk you through all the steps steps of making your corner of the Internet your own. If you ever need to log into the Content Management System later (after you’ve set up your account), you may log into the CMS at <a href="https://<%= Refinery::Core.site_name %>/admin" target="_blank"><%= Refinery::Core.site_name %>/admin</a>.
-      </p>
-      <p>If you're antsy to get started, we don't blame you! Let's change the world and have fun doing it!</p>
-    <% else %>
       <p>Howdy, <%= first_name %>!</p>
 
-      <p>Guess what? <%= inviting_user %> has invited you to join <a href="https://<%= Refinery::Core.site_name %>" target="_blank"><%= Refinery::Core.site_name %></a>! Lucky you.</p>
+      <p>Guess what? <%= inviting_user %> has invited you to join <a href="<%= @resource.site_url %>" target="_blank"><%= Refinery::Core.site_name %></a>! Lucky you.</p>
 
       <p>
-        If you ever need to log into the Content Management System later (after you’ve set up your account), you may log into the CMS at <a href="https://<%= Refinery::Core.site_name %>/admin" target="_blank"><%= Refinery::Core.site_name %>/admin</a>.
+        If you ever need to log into the Content Management System later (after you’ve set up your account), you may log into the CMS at <a href="<%= @resource.site_url %>/admin" target="_blank"><%= Refinery::Core.site_name %>/admin</a>.
       </p>
       <p><%= 'If you\'re antsy to get started, we don\'t blame ya! Let\'s get started, shall we?' %></p>
-    <% end %>
   <% end %>
 
   <% content_for :action_link do %>
@@ -62,7 +50,7 @@
 
   <% content_for :email_signoff do %>
     <p>With love,</p>
-    <p>The <a href="https://<%= Refinery::Core.site_name %>" target="_blank"><%= Refinery::Core.site_name %></a> team</p>
+    <p>The <a href="<%= @resource.site_url %>" target="_blank"><%= Refinery::Core.site_name %></a> team</p>
     <p></p>
     <p><%= 'P.S. This is a friendly reminder that this is a public beta and we are still fiddling with a few kinks in the system. Thanks for being patient and do not be shy to send your thoughts on the experience!' %></p>
   <% end %>
