space added between icon and content for inquiries index entries

--- a/app/views/refinery/inquiries/admin/inquiries/_inquiry.html.erb
+++ b/app/views/refinery/inquiries/admin/inquiries/_inquiry.html.erb
@@ -1,7 +1,7 @@
 <li class='page-listing' id="<%= dom_id(inquiry) -%>">
   <div class="page-row">
 
-    <i class="gcicon gcicon-file"></i>
+    <i class="gcicon gcicon-file"></i>&nbsp;
     <a href="<%= refinery.inquiries_admin_inquiry_path(inquiry) %>" class="page-title">
       <span>
         <%= inquiry.name %> <%= t('.said') %>:
