user listings on user index have people icons not file icons now

--- a/app/views/refinery/admin/users/_user.html.erb
+++ b/app/views/refinery/admin/users/_user.html.erb
@@ -7,7 +7,7 @@
 
 <li class='page-listing' id="<%= dom_id(user) -%>">
   <div class="page-row">
-    <i class="gcicon gcicon-file"></i>
+    <i class="gcicon gcicon-user-1"></i>&nbsp;
 
     <% link_elem = editable ? 'a' : 'div' %>
     <<%= link_elem %> <%= "href=#{refinery.edit_admin_user_path(user)}" if editable %> class="page-title">
