Page slug editing (persist if slug has been overwritten)

--- a/app/views/refinery/admin/pages/_form.html.erb
+++ b/app/views/refinery/admin/pages/_form.html.erb
@@ -24,9 +24,16 @@
     <% if Refinery::Pages.use_custom_slugs %>
       <% parent_slug = @page.parent.present? ? @page.parent.nested_path : '' %>
       <div class="sidebar-section">
+        <div class='form-group hidden'>
+          <%= f.check_box :slugify_title %>
+          <%= f.label :slugify_title %>
+        </div>
         <div class="sidebar-section-heading">
           <div class="url">
-            <span id="domain-name"></span><%= parent_slug %>/<span class="slug glass-edit" data-glass-options='{"form_id": "page_custom_slug", "slugify": "page_title"}'><%= @page.custom_slug %></span>/
+            <span id="domain-name"></span><%= parent_slug %>/<span
+              class="slug glass-edit"
+              data-glass-options='{"form_id": "page_custom_slug", "slugify": "page_title", "slugify_if": "page_slugify_title"}'
+            ><%= @page.slug %></span>/
           </div>
         </div>
       </div>
