--- a/app/views/refinery/_email_template.html.erb
+++ b/app/views/refinery/_email_template.html.erb
@@ -1,5 +1,3 @@
-<%#= simple_format(strip_tags(Refinery::JoinOrganizations::Setting.confirmation_body.gsub("%name%", @join_organization.name))) -%>
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
@@ -67,7 +65,7 @@
                                 <tbody>
                                   <tr>
                                     <td class="mcnImageContent" valign="top" style="padding-right: 0px; padding-left: 0px; padding-top: 0; padding-bottom: 0;">
-                                      <img align="left" alt="" src="http://glasscanvas.s3.amazonaws.com/lifecollective-banner.jpg" width="600" style="max-width:1200px; padding-bottom: 0; display: inline !important; vertical-align: bottom; -webkit-border-top-right-radius: 5px; -webkit-border-top-left-radius: 5px; -moz-border-radius-topright: 5px; -moz-border-radius-topleft: 5px; border-top-right-radius: 5px; border-top-left-radius: 5px;" class="mcnImage">
+                                      <!--<img align="left" alt="" src="http://glasscanvas.s3.amazonaws.com/lifecollective-banner.jpg" width="600" style="max-width:1200px; padding-bottom: 0; display: inline !important; vertical-align: bottom; -webkit-border-top-right-radius: 5px; -webkit-border-top-left-radius: 5px; -moz-border-radius-topright: 5px; -moz-border-radius-topleft: 5px; border-top-right-radius: 5px; border-top-left-radius: 5px;" class="mcnImage">-->
                                      </td>
                                   </tr>
                                 </tbody>
