--- a/app/views/refinery/admin/users/index.html.erb
+++ b/app/views/refinery/admin/users/index.html.erb
@@ -13,10 +13,11 @@
           </a>
         </div>
       </div>
-      <div class="col-sm-12 index-listing sortable_list">
+      <div class="col-sm-12 index-listing">
         <%= render 'records' %>
       </div>
     </div>
 	</section>
 <% end %>
 <%= render 'refinery/admin/users/submenu' %>
+
