--- a/app/views/refinery/admin/users/_records.html.erb
+++ b/app/views/refinery/admin/users/_records.html.erb
@@ -1,7 +1,7 @@
 <%= render 'refinery/admin/search_header', :url => refinery.admin_users_path %>
 <div id="users-index" class="infinite-scrolling-container" data-url="<%= refinery.admin_users_path(:page => @users.next_page) %>" data-total-pages="<%= @users.total_pages %>">
   <% if @users.any? %>
-    <ul id='users' class='list-unstyled'>
+    <ul id='users' class='list-unstyled sortable_list'>
       <%= render 'users' %>
     </ul>
   <% else %>
