--- a/app/views/refinery/admin/glass/_delete_button.html.erb
+++ b/app/views/refinery/admin/glass/_delete_button.html.erb
@@ -1,5 +1,5 @@
 <%=
     ("<button class='#{css_class} delete delete-modal'" +
       "data-url='#{delete_url}' data-redirect-url='#{after_delete_url}'" +
-      "data-text='#{confirm_text}'>#{delete_btn_text}").html_safe
+      "data-text='#{confirm_text}'>#{delete_btn_text}</button>").html_safe
 -%>
