--- a/app/views/refinery/inquiries/admin/inquiries/_inquiry.html.erb
+++ b/app/views/refinery/inquiries/admin/inquiries/_inquiry.html.erb
@@ -12,15 +12,14 @@
 
     <span class='actions actions-col-2'>
 
-      <span class="delete">                  
-        <%= link_to '<i class="gcicon gcicon-trash"></i>'.html_safe, 
-          refinery.inquiries_admin_inquiry_path(inquiry),
-          :class => "cancel confirm-delete circle-icon",
-          :title => t('.delete'),
-          :data => {
-            :confirm => t('refinery.admin.delete.message', :title => inquiry.name)
-          },
-          :method => :delete %>
+      <span class="delete">
+        <%= render 'refinery/admin/glass/delete_button',
+                   css_class: 'cancel confirm-delete circle-icon',
+                   delete_url: refinery.inquiries_admin_inquiry_path(inquiry),
+                   after_delete_url: refinery.inquiries_admin_inquiries_path,
+                   confirm_text: 'Are you sure you want to delete this Inquiry?',
+                   delete_btn_text: '<i class="gcicon gcicon-trash"></i>'
+        -%>
       </span>
 
       <span class="spam-filter">
