search no results showing

--- a/app/views/refinery/admin/users/_records.html.erb
+++ b/app/views/refinery/admin/users/_records.html.erb
@@ -5,7 +5,7 @@
       <%= render 'users' %>
     </ul>
   <% else %>
-    <p>
+    <p class="sortable_list">
       <% unless searching? %>
         <strong>
           <%= t('.no_items_yet') %>
